* FEA#8269 Add the possibility to cancel an indemnification payment, and warning when doing it.
* BUG#8595 Always display the payback reason in the payback step in the new indemnification wizard
* BUG#8523 Fix crash when delivering a benefit on a loss with an end_date in case the full period is a dedutible period
* FEA#8287 Add a claim super manager group which is authorized to manually set the indemnifications
* FEA#8284 Add "Claim Invoices" relate on claims, and "Claim Invoices" menu
* BUG#8430 Take off 'note' required states on indemnification wizard and display an error message instead of a tryton domain error
* BUG#8371 Check indemnifications scheduling by service when running indemnification creation batch due to check on previous periods feature
* FEA#8159 Add the configuration field "Block Indemnifications Scheduling" on claim sub status which allows blocking indemnifications scheduling on open claims
* OTH#0000 Iteration on 7982. Set default payment journal if possible on an indemnification
* BUG#8387 Add default value for active field on payback reason
* OTH#0000 Only do payback reason migration for cancelled indemnifications
* FEA#8166 Add a payback reason on claim indemnifications
* FEA#8225 Allow to set tax_date at indemnification start
* BUG#8241 The last paid indemnification date ignores deductible periods
* FEA#7982 Add payment journals on benefits for the indemnification periods creation
* FEA#8032 Add check which prevent scheduling if the previous period is missing
* FEA#7975 Add action on indemnification detail lines to delete the related indemnification
* OTH#0000 Hide invoice line in indemnification if empty following 7802
* BUG#7893 Add rule engine method to define wether an indemnification is manual or not.
* BUG#7891 Indemnification process fixes for some required fields
* FEA#7850 Enhance claim services display in indemnifications wizard
* BUG#7583 Various fixes on claim indemnification process